we goin java boisss

--- a/INF152/tarea2/main.tex
+++ b/INF152/tarea2/main.tex
@@ -195,8 +195,8 @@ Aquí tiene un pseudocódigo de ejemplo, que puede utilizar como plantilla para 
 \ENDFOR
 \STATE{\textbf{return} maxValue}
 \STATE{\textit{// list() puede ser reemplazado por lista[], pero debe ser una estructura iterable}}
+\STATE{\textit{// y se asume la existencia de un metodo append() o parecido que agrege elementos a lista}}
 \STATE{\textit{// se asume la existencia de una funcion stringToInt() que transforme strings a enteros}}
-\STATE{\textit{// se asume la existencia de un metodo append() que agrege elementos a lista}}
 
 \end{algorithmic}
 \caption{Find the minimum value larger than the parameter} %titulo
