--- a/INF152/tarea2/main.tex
+++ b/INF152/tarea2/main.tex
@@ -347,8 +347,9 @@ q & 0 & 0 & 0 & 0 & 1 & 0\\
 \item Demuestre o refute la existencia de un circuito de Euler en el grafo 2. ¿Existe Camino de Euler? En caso de que exista, nombre uno. [15 pts].
 
 \textbf{Solución:}
-El camino de Euler tiene una condicion que lo define, la cual es \{$\exists \  2 \ v \in V \ | \ \delta(v) $ es impar\}, lo
-que en el caso del grafo 2 no se cumple pues todos sus nodos son de grado par, lo que da lugar a la definicion del Circuito de Euler.
+\newline
+El camino de Euler tiene una condición que lo define, la cual es \{$\exists \  2 \ v \in V \ | \ \delta(v) $ es impar\}, lo
+que en el caso del grafo 2 no se cumple pues todos sus nodos son de grado par, lo que da lugar a la definición del Circuito de Euler.
 
 \item Demuestre o refute: Grafo \textbf{1} y Grafo \textbf{3} son isomorfos [20 pts]
 
@@ -360,7 +361,7 @@ requisitos para que sean isomorfos es que el grado de $ V$ sea igual, entonces:
 \begin{equation*}
     |V_1| = 6  \quad \textrm{;} \quad  |V_3| = 6
 \end{equation*}
-Una vez sabemos que son grafos con la misma cantidad de nodos, debemos definir la funcion biyectiva que relacione estos nodos segun su grado.
+Una vez sabemos que son grafos con la misma cantidad de nodos, debemos definir la función biyectiva que relacione estos nodos según su grado.
 \begin{equation*}
     \psi (m) = d ,\ 
     \psi (l) = c ,\ 
@@ -378,7 +379,7 @@ y como $ \psi()$ debe ser biyectiva, tambien hay que definir su inversa:
     \psi^{-1} (a) = p ,\ 
     \psi^{-1} (f) = q
 \end{equation*}
-Y así la funcion $ \psi()$ define el isomorfismo entre los grafos 1 y 3.
+Y así la función $ \psi()$ define el isomorfismo entre los grafos 1 y 3.
 
 \end{enumerate}
 \newpage
