--- a/INF152/tarea3/main.tex
+++ b/INF152/tarea3/main.tex
@@ -155,5 +155,20 @@ Está demás decir que si se encuentran dos tareas con el mismo grafo y los mism
 \textbf{Nota}: todos los grafos de esta tarea deben ser generados utilizando el package Tikz de \LaTeX.
 
 \end{enumerate}
+
+
+\newpage
+\section{Desarollo}
+\begin{enumerate}
+    \item a)
+\end{enumerate}
+
+
+
+
+
+
+
+
 \end{document}
 
